--- a/kairajohnson_project-01.css
+++ b/kairajohnson_project-01.css
@@ -1,22 +1,22 @@
-#welcome_page{
+body {
   background-image: url("greenbackground.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   width: 100%;
-  height: 900px;
+  height: 800px;
 }
 
 #welcome_text h1 {
   text-align: center;
-  padding-top: 19%;
+  padding-top: 16%;
   font-size: 52px;
   color: white;
 }
 
 #letsplay {
   padding: 17px;
-    margin: 0 42%;
+    margin: 0 41%;
     background-color: salmon;
     width: 234px;
     color: white;
@@ -32,12 +32,12 @@
   border-radius: 20px;
   width: 300px;
   Height: auto;
-  margin: auto auto;
+  margin: 12% 0 0 8%;
   background-color: rgba(255, 255, 255, .6);
 
 }
 
-#yes, #no {
+#button {
   width: 40%;
     height: auto;
     margin: 5% 5% 4% 5%;
@@ -47,33 +47,9 @@
     padding: 5px 0;
 }
 
-.Question1 {
-  font-size: 32px;
+#questionBox {
+  font-size: 24px;
   text-align: center;
   padding: 35px 20px 0 35px;
   font-weight: 600;
-}
-
-.Question2 {
-  font-size: 32px;
-  text-align: center;
-  padding: 35px 20px 0 35px;
-  font-weight: 600;
-  display: none;
-}
-
-.Question3 {
-  font-size: 32px;
-  text-align: center;
-  padding: 35px 20px 0 35px;
-  font-weight: 600;
-  display: none;
-}
-
-.Question4 {
-  font-size: 32px;
-  text-align: center;
-  padding: 35px 20px 0 35px;
-  font-weight: 600;
-  display: none;
 }
