--- a/kairajohnson_project-01.css
+++ b/kairajohnson_project-01.css
@@ -6,6 +6,9 @@ body {
   width: 100%;
   height: 800px;
 }
+#wrapper {
+  display: none;
+}
 
 #welcome_text h1 {
   text-align: center;
@@ -14,7 +17,7 @@ body {
   color: white;
 }
 
-#letsplay {
+ #letsplay {
   padding: 17px;
     margin: 0 41%;
     background-color: salmon;
@@ -27,29 +30,47 @@ body {
 
 
 #trivia_box {
-  display: none;
-  border: 8px solid orange;
-  border-radius: 20px;
-  width: 300px;
+  max-width: 50%;
   Height: auto;
-  margin: 12% 0 0 8%;
-  background-color: rgba(255, 255, 255, .6);
+  margin-top: 12%;
+  float: left;
 
 }
 
 #button {
-  width: 40%;
-    height: auto;
-    margin: 5% 5% 4% 5%;
-    font-size: 21px;
-    background-color: white;
-    border: 2px solid orange;
-    padding: 5px 0;
+  height: 125px;
+  font-size: 21px;
+  background-image: url("nTX8BXALc.png");
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 50px;
+  margin-left: 65px;
+
 }
 
 #questionBox {
-  font-size: 24px;
+  font-size: 42px;
   text-align: center;
-  padding: 35px 20px 0 35px;
+  padding-top: 35px;
   font-weight: 600;
+  width: 500px;
+}
+
+#plus-sign {
+    background-image: url("plus.svg");
+    width: 16%;
+    height: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: right;
+    margin-top: 17%;
+}
+
+#score {
+  width: 17%;
+float: right;
+font-size: 42px;
+font-weight: 600;
+margin-top: 19%;
 }
